--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "polytrader-agent"
+name = "polytrader"
 version = "0.0.1"
 description = "An agent that trades on Polymarket"
 authors = [
@@ -17,6 +17,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "langchain-community>=0.3.16",
     "websockets>=14.2",
+    "py-order-utils>=0.3.2",
+    "py-clob-client>=0.20.0",
+    "web3>=7.5.0",
 ]
 
 [project.optional-dependencies]
@@ -27,29 +30,32 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["polytrader_agent"]
-[tool.setuptools.package-dir]
-"polytrader_agent" = "src/polytrader_agent"
-"langgraph.templates.polytrader_agent" = "src/polytrader_agent"
+packages = [
+    "polytrader",
+]
 
+[tool.setuptools.package-dir]
+"polytrader" = "src/polytrader/"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
 
 [tool.ruff]
 lint.select = [
-    "E",    # pycodestyle
-    "F",    # pyflakes
-    "I",    # isort
-    "D",    # pydocstyle
-    "D401", # First line should be in imperative mood
+    "E",
+    "F",
+    "I",
+    "D",
+    "D401",
     "T201",
     "UP",
 ]
 include = ["*.py", "*.pyi", "*.ipynb"]
 lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
+
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["D", "UP"]
 "ntbk/*" = ["D", "UP", "T201"]
+
 [tool.ruff.lint.pydocstyle]
 convention = "google"
