--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,6 +3,18 @@
 # Default target executed when no arguments are given to make.
 all: help
 
+
+######################
+# LangGraph Server
+######################
+
+lg-server:
+	langgraph dev
+
+######################
+# TESTS
+######################
+
 # Define a variable for the test file path.
 TEST_FILE ?= tests/unit_tests/
 
@@ -61,4 +73,5 @@ help:
 	@echo 'tests                        - run unit tests'
 	@echo 'test TEST_FILE=<test_file>   - run all tests in file'
 	@echo 'test_watch                   - run unit tests in watch mode'
+	@echo 'lg-server                    - run LangGraph server'
 
