--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-anthropic>=0.3.4",
     "langchain>=0.3.17",
     "langchain-fireworks>=0.2.7",
+    "langchain-exa>=0.2.1",
     "python-dotenv>=1.0.1",
     "langchain-community>=0.3.16",
     "websockets>=14.2",
