--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ POLYMARKET_API_SECRET=your_polymarket_api_secret
 POLYMARKET_WALLET_PRIVKEY=your_wallet_private_key
 TAVILY_API_KEY=your_tavily_api_key
 EXA_API_KEY=your_exa_api_key
+LANGGRAPH_DEPLOYMENT_URL=...
