--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@langchain/langgraph-sdk": "^0.0.37",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
