--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@langchain/langgraph-sdk": "^0.0.37",
+    "@polymarket/clob-client": "^4.15.0",
     "@privy-io/react-auth": "^2.4.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -17,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "ethers": "^5.7.1",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.0.9",
     "next": "15.1.0",
