--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@langchain/langgraph-sdk": "^0.0.37",
     "@polymarket/clob-client": "^4.15.0",
     "@privy-io/react-auth": "^2.4.2",
+    "@privy-io/wagmi": "^1.0.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -25,7 +27,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
