--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@privy-io/react-auth": "^2.4.2",
     "@privy-io/wagmi": "^1.0.3",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@tanstack/react-query": "^5.66.0",
@@ -28,6 +30,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.23.2",
     "wagmi": "^2.14.11"
   },
   "devDependencies": {
