--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,32 @@
-POLYMARKET_API_KEY=your_polymarket_api_key
-POLYMARKET_API_SECRET=your_polymarket_api_secret
-POLYMARKET_WALLET_PRIVKEY=your_wallet_private_key
-TAVILY_API_KEY=your_tavily_api_key
-EXA_API_KEY=your_exa_api_key
-LANGGRAPH_DEPLOYMENT_URL=...
+#
+# Environment Variables
+#
+# Just use the same env for both the backend and frontend
+#
+
+POLYMARKET_HOST="https://clob.polymarket.com"
+LANGSMITH_PROJECT=polytrader
+
+POLYMARKET_API_KEY=
+POLYMARKET_API_SECRET=
+POLYGON_WALLET_PRIVATE_KEY=
+OPENAI_API_KEY=
+# Not needed
+TAVILY_API_KEY=
+ANTHROPIC_API_KEY=
+EXA_API_KEY=
+LANGCHAIN_API_KEY=
+PRIVY_SECRET=
+NEXT_PUBLIC_PRIVY_APP_ID=
+PRIVY_JWKS_ENDPOINT=
+
+
+# Retrieved from Polymarket after connecting your wallet via their UI
+NEXT_PUBLIC_POLYMARKET_PROXY_ADDRESS=
+# USDC and USDCe addresses 
+NEXT_PUBLIC_USDC_ADDRESS="0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174"
+NEXT_PUBLIC_USDCE_ADDRESS="0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174"
+
+# Tracing and deployment
+LANGCHAIN_TRACING_V2=true
+LANGGRAPH_DEPLOYMENT_URL="http://localhost:2024"
