--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,7 @@ PRIVY_JWKS_ENDPOINT=
 
 # Retrieved from Polymarket after connecting your wallet via their UI
 NEXT_PUBLIC_POLYMARKET_PROXY_ADDRESS=
-# USDC and USDCe addresses 
-NEXT_PUBLIC_USDC_ADDRESS="0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174"
+# USDCe on Polygon (https://polygonscan.com/address/0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174)
 NEXT_PUBLIC_USDCE_ADDRESS="0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174"
 
 # Tracing and deployment
